# ai-synthetic-user-library

./: .env.example  .gitignore  .tmp_repro.py  AGENTS.md  AGENT_WORKFLOW.md  DATA_MODEL.md  DEVELOPMENT_ROADMAP.md  EVALUATION_PLAN.md  FACILITATOR_AUDIT_FEEDBACK_IMPLEMENTATION_PLAN.md  FACILITATOR_AUDIT_FEEDBACK_SCHEMA.md  HARNESS_ENGINEERING_PLAN.md  HUMAN_DIFFERENCE_AXES.md  HUMAN_SKILL_FOUNDATION.md  MULTI_TENANT_DATA_MODEL.md  PERSONA_CATALOG_GOVERNANCE.md  PERSONA_DIVERSITY_SCALING_PLAN.md  PERSONA_GENERATION_PRINCIPLES_FOR_REALISTIC_INTERVIEWS.md  PERSONA_MODELING_GUIDE.md  PERSONA_SCHEMA_V5_1.md  PLATFORM_BLUEPRINT.md  PLATFORM_STATUS.yaml  PLATFORM_UI_DESIGN_SYSTEM_PRINCIPLES.md  POC_SCOPE.md  PRODUCT_BRIEF.md  README.md  SAAS_BACKEND_BLUEPRINT.md  SAFETY_AND_SENSITIVE_TOPIC_POLICY.md  SUGGESTED_FOLDER_STRUCTURE.md  SYSTEM_ARCHITECTURE.md  UX_OPERATING_MODEL.md  package-lock.json  pyproject.toml
configs/: runtime_defaults.json
experiments/: v5_hk_bank_wealth_guide.json  v5_test_guide.json
reports/: codex_probe_report.json  codex_probe_report_post_wave.json  codex_probe_report_retry_layer.json  openai_auth_summary.json  persona_library_summary_current.json  persona_llm_batch_report.json  persona_llm_batch_report_2.json  persona_llm_target_10_report.json  persona_llm_target_10_retry_report.json  persona_llm_target_12_report.json  persona_llm_target_12_retry_report.json  persona_llm_target_15_report.json  persona_llm_target_30_finish_report.json  sample_report.csv  sample_report.md  su_0001_v3_1_distinctiveness.json  su_0001_v3_distinctiveness.json  (+1 more)
(+4175 files in other folders)
