[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-validation-swarm"
version = "0.1.0"
description = "Local POC for structured synthetic-user validation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ai-validation-swarm = "ai_validation_swarm.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.unittest]
start-directory = "tests"

